fix overflow resizing

--- a/src/components/HorseStats.css
+++ b/src/components/HorseStats.css
@@ -1,7 +1,7 @@
 .horse-stats {
   display: flex;
-  align-items: flex-start;
-  width: 26vw;
+  width: auto;
+  max-width: fit-content;
   /* height: 50vh; */
   border: 3px solid #dadada;
   border-radius: 12px;
@@ -11,6 +11,7 @@
 }
 
 .horse-bio {
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   /* border: 1px solid black; */
@@ -32,9 +33,14 @@
 
 .stats-container {
   display: flex;
-  width: 100%;
   border-radius: 6px;
   border: 2px solid #79d823;
+  flex-shrink: 1;
+  flex-grow: 1;
+  max-width: 100%;
+  width: auto;
+  flex-wrap: nowrap;
+  overflow: scroll;
 }
 
 .stat {
@@ -44,7 +50,6 @@
   flex-direction: column;
   gap: 0;
   margin: 0;
-  font-style: bold;
   font-size: 18px;
   font-weight: 600;
 }
@@ -132,4 +137,13 @@ input {
   border-radius: 4px;
   padding: 4px;
   text-align: center;
+  font-size: 18px;
+  font-weight: 550;
 }
+
+/* @media (prefers-color-scheme: dark) {
+  .skill-container {
+    color: #eee;
+    background-color: #e27c40;
+  }
+} */
