--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -10,7 +10,7 @@
  }
 
  img:hover {
- 	filter: drop-shadow(0 0 2em #673ab8aa);
+ 	filter: drop-shadow(0 0 0.8em #57c3c7aa);
  }
 
  .home section {
