--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,6 @@ main {
 /* @media (prefers-color-scheme: dark) {
 	:root {
 		color: #ccc;
-		background-color: #1a1a1a;
+		background-color: #4e4e4e;
 	}
 } */
